@@ -81,7 +81,7 @@ public class ReadingSessionService {
                         .count(e.getValue())
                         .build())
                 .sorted(Comparator.comparing(ReadingSessionHeatmapResponse::getDate))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private List<PeakHoursResponse> computePeakHours(List<SessionTimestampDto> sessions, ZoneId zone) {
@@ -190,7 +190,7 @@ public class ReadingSessionService {
                         .totalSessions(dto.getTotalSessions())
                         .totalDurationSeconds(dto.getTotalDurationSeconds())
                         .build())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<ReadingSpeedResponse> getReadingSpeedForYear(int year) {
@@ -207,7 +207,7 @@ public class ReadingSessionService {
                         .avgProgressPerMinute(dto.getAvgProgressPerMinute())
                         .totalSessions(dto.getTotalSessions())
                         .build())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<PeakHoursResponse> getPeakReadingHours(Integer year, Integer month) {
@@ -247,7 +247,7 @@ public class ReadingSessionService {
                             .averageSessionsPerBook(Math.round(avgSessionsPerBook * 100.0) / 100.0)
                             .build();
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<CompletionTimelineResponse> getCompletionTimeline(int year) {
@@ -285,7 +285,7 @@ public class ReadingSessionService {
                     int cmp = b.getYear().compareTo(a.getYear());
                     return cmp != 0 ? cmp : b.getMonth().compareTo(a.getMonth());
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public Page<ReadingSessionResponse> getReadingSessionsForBook(Long bookId, int page, int size) {
@@ -330,7 +330,7 @@ public class ReadingSessionService {
                         .month(dto.getMonth())
                         .count(dto.getCount())
                         .build())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<PageTurnerScoreResponse> getPageTurnerScores() {
@@ -351,7 +351,7 @@ public class ReadingSessionService {
                         ? book.getMetadata().getCategories().stream()
                         .map(CategoryEntity::getName)
                         .sorted()
-                        .collect(Collectors.toList())
+                        .toList()
                         : List.of();
                 bookCategories.put(book.getId(), categories);
             });
@@ -366,7 +366,7 @@ public class ReadingSessionService {
 
                     List<Double> durations = bookSessions.stream()
                             .map(s -> s.getDurationSeconds() != null ? s.getDurationSeconds().doubleValue() : 0.0)
-                            .collect(Collectors.toList());
+                            .toList();
 
                     List<Double> gaps = new ArrayList<>();
                     for (int i = 1; i < bookSessions.size(); i++) {
@@ -412,7 +412,7 @@ public class ReadingSessionService {
                             .build();
                 })
                 .sorted(Comparator.comparingInt(PageTurnerScoreResponse::getGripScore).reversed())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private static final int COMPLETION_RACE_BOOK_LIMIT = 10;
@@ -448,7 +448,7 @@ public class ReadingSessionService {
                         .sessionDate(dto.getSessionDate())
                         .endProgress(dto.getEndProgress())
                         .build())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<ReadingSessionHeatmapResponse> getReadingDates() {
@@ -471,7 +471,7 @@ public class ReadingSessionService {
                         .rating(dto.getRating())
                         .count(dto.getCount())
                         .build())
-                .collect(Collectors.toList());
+                .toList();
 
         // Status distribution
         List<BookDistributionsResponse.StatusBucket> statusBuckets = userBookProgressRepository.findStatusDistributionByUser(userId)
@@ -480,7 +480,7 @@ public class ReadingSessionService {
                         .status(dto.getStatus().name())
                         .count(dto.getCount())
                         .build())
-                .collect(Collectors.toList());
+                .toList();
 
         // Progress distribution — coalesce to max across sources, then bucket
         List<ProgressPercentDto> progressRows = userBookProgressRepository.findAllProgressPercentsByUser(userId);
@@ -549,7 +549,7 @@ public class ReadingSessionService {
                             .dayOfWeek(toSundayFirstDow(zdt.getDayOfWeek()))
                             .build();
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public ReadingStreakResponse getReadingStreak() {
@@ -633,7 +633,7 @@ public class ReadingSessionService {
                         .maxProgress(dto.getMaxProgress())
                         .readStatus(dto.getReadStatus())
                         .build())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private double linearRegressionSlope(List<Double> values) {
@@ -678,7 +678,7 @@ public class ReadingSessionService {
                         .sessions(e.getValue()[0])
                         .durationMinutes(Math.round(e.getValue()[1] / 60.0))
                         .build())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<WeeklyListeningTrendResponse> getWeeklyListeningTrend(int weeks) {
@@ -708,7 +708,7 @@ public class ReadingSessionService {
                             .sessions(entry.getValue()[1])
                             .build();
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public ListeningCompletionResponse getListeningCompletion() {
@@ -743,7 +743,7 @@ public class ReadingSessionService {
                 .totalAudiobooks(totalAudiobooks)
                 .completed(completed)
                 .inProgressCount(inProgressCount)
-                .inProgress(inProgress.stream().limit(10).collect(Collectors.toList()))
+                .inProgress(inProgress.stream().limit(10).toList())
                 .build();
     }
 
@@ -773,7 +773,7 @@ public class ReadingSessionService {
                             .totalListeningSeconds(listeningSeconds)
                             .build();
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public ListeningFinishFunnelResponse getListeningFinishFunnel() {
@@ -815,11 +815,6 @@ public class ReadingSessionService {
         return computePeakHours(sessions, zone);
     }
 
-    public List<FavoriteReadingDaysResponse> getListeningFavoriteDays(Integer year, Integer month) {
-        Long userId = authenticationService.getAuthenticatedUser().getId();
-        ZoneId zone = ZoneId.systemDefault();
-        PeriodBounds bounds = computeOptionalBounds(year, month);
-
         var sessions = readingSessionRepository.findListeningSessionTimestampsByUser(userId, bounds.start(), bounds.end());
         return computeFavoriteDays(sessions, zone);
     }
@@ -842,7 +837,7 @@ public class ReadingSessionService {
                             .averageSessionsPerBook(Math.round(avgSessionsPerBook * 100.0) / 100.0)
                             .build();
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<ListeningAuthorResponse> getListeningAuthorStats() {
@@ -856,7 +851,7 @@ public class ReadingSessionService {
                         .totalSessions(dto.getTotalSessions())
                         .totalDurationSeconds(dto.getTotalDurationSeconds())
                         .build())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<SessionScatterResponse> getListeningSessionScatter() {
@@ -873,7 +868,7 @@ public class ReadingSessionService {
                             .dayOfWeek(toSundayFirstDow(zdt.getDayOfWeek()))
                             .build();
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<LongestAudiobookResponse> getListeningLongestBooks() {
@@ -894,6 +889,6 @@ public class ReadingSessionService {
                             .progressPercent(Math.round(maxProg * 10.0) / 10.0)
                             .build();
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 }
